--- a/src/css/components/header.less
+++ b/src/css/components/header.less
@@ -1,5 +1,5 @@
 #rtfd-header .ui.secondary.menu {
-  background: url(../../images/header-bg.png) bottom left repeat-x #465158;
+  background-color: #465158;
 }
 
 .rtfd-header-title h1 {
@@ -47,7 +47,7 @@ div.menu-user div.menu-button {
 .menu.menu-user .ui.buttons .ui.menu-button.button:hover {
   height: 24px;
   padding: 4px 1em 28px 4px;
-  background: #7C8F99 url(../../images/gradient-light.png) bottom left repeat-x !important;
+  background-color: #7C8F99 !important;
   color: #fff !important;
   text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5);
   border-radius: 0;
@@ -58,7 +58,7 @@ div.menu-user div.menu-button {
 
 #rtfd-header .ui.buttons .floating.dropdown.icon.button,
 #rtfd-header .ui.buttons .floating.dropdown.icon.button:hover {
-  background: url(../../images/gradient-light.png) left bottom repeat-x rgb(124, 143, 153) !important;
+  background: rgb(124, 143, 153) !important;
   border-radius: 0em 0.3em 0.3em 0em;
   border-top: 1px solid #ccc !important;
   height: 32px;
