--- a/src/css/components/home_header.less
+++ b/src/css/components/home_header.less
@@ -1,7 +1,7 @@
 #home-header {
 
   .ui.secondary.menu {
-    background: url(../../images/header-home-bg.svg) bottom left repeat-x #465158;
+    background-color: #465158;
     border-bottom: 1px solid #333;
     background-repeat: repeat;
   }
