--- a/src/css/components/table.less
+++ b/src/css/components/table.less
@@ -79,7 +79,7 @@ span.build-state.build-state-passing {
 }
 
 .module-item:hover {
-  background: #f3f3f3 url(../../images/gradient-light.png) bottom left repeat-x;
+  background-color: #f3f3f3;
 }
 
 .module-item .module-item-menu li a {
@@ -93,7 +93,7 @@ span.build-state.build-state-passing {
   line-height: 17px;
   text-decoration: none;
   color: #fff;
-  background: #8CA1AF url(../../images/gradient-light.png) bottom left repeat-x;
+  background-color: #8CA1AF;
   border-radius: 3px;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
   box-shadow: 0 1px 1px #465158;
