--- a/src/css/pages/project_detail.less
+++ b/src/css/pages/project_detail.less
@@ -1,5 +1,5 @@
 #project_bar {
-  background: #E8ECEF url(../../images/project-bar-bg.png) top left repeat;
+  background-color: #E8ECEF;
   border-bottom: 1px solid #DAE1E5;
   overflow: hidden;
   position: relative;
@@ -49,7 +49,7 @@
     line-height: 20px;
     text-decoration: none;
     color: #fff;
-    background: #8CA1AF url(../../images/gradient-light.png) bottom left repeat-x;
+    background-color: #8CA1AF;
     box-shadow: 0 1px 1px #465158;
     border-radius: 3px;
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
