--- a/src/css/site.less
+++ b/src/css/site.less
@@ -149,7 +149,7 @@
 
 /* ------ SITE WIDE STYLES ------ */
 body {
-  background: #fafafa url(../images/body-bg.svg) top left repeat;
+  background: #fafafa;
   color: #444;
 }
 
