--- a/src/css/components/buttons.less
+++ b/src/css/components/buttons.less
@@ -3,7 +3,7 @@ a.regular {
   color: #fff;
   display: block;
   padding: 10px 20px;
-  background: #7C8F99 url(../../images/gradient-light.png) bottom left repeat-x;
+  background-color: #7C8F99;
   font-weight: bold;
   text-shadow: 0px 1px 0 rgba(0, 0, 0, 0.7);
   text-decoration: none;
@@ -29,7 +29,7 @@ a.cta-btn {
   text-shadow: rgba(0, 0, 0, 0.5) 0px 1px 1px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 0px, rgba(255, 255, 255, 0.5) 0px 1px 0px inset;
   margin: 0.3em 0em;
-  background: url(../../images/gradient.png) left bottom repeat-x rgb(142, 204, 76);
+  background-color: rgb(142, 204, 76);
   border-width: 1px;
   border-style: solid;
   border-image: initial;
@@ -57,7 +57,7 @@ a.button {
   font-weight: bold;
   padding: 8px 15px;
   border: none;
-  background: #e6e6e6 url(../../images/gradient.png) repeat-x bottom left;
+  background-color: #e6e6e6;
   margin: 30px 5px 20px 0;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 1);
   border: 1px solid #bfbfbf;
