--- a/readthedocsext/theme/templates/homepage.html
+++ b/readthedocsext/theme/templates/homepage.html
@@ -104,7 +104,7 @@
   <section>
     <p style="text-align: center">
       <a href="https://docs.readthedocs.io/page/intro/getting-started-with-sphinx.html"
-        class="cta-btn">{% trans 'Getting started guide' %}</a>
+        class="cta-btn ui button green">{% trans 'Getting started guide' %}</a>
     </p>
   </section>
 
