--- a/src/css/components/table.less
+++ b/src/css/components/table.less
@@ -83,23 +83,5 @@ span.build-state.build-state-passing {
 }
 
 .module-item .module-item-menu li a {
-  display: block;
-  padding: 6px 10px 4px;
-  margin: 0;
-  padding: 8px 10px 22px 10px;
-  font-weight: bold;
-  font-size: 14px;
-  height: 20px;
-  line-height: 17px;
-  text-decoration: none;
-  color: #fff;
-  background-color: #8CA1AF;
-  border-radius: 3px;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
-  box-shadow: 0 1px 1px #465158;
-}
-
-.module-item .module-item-menu li a:hover {
-  background-color: #697983;
-  box-shadow: 0 1px 0px #465158;
+  padding: 8px 10px;
 }
