--- a/readthedocsext/theme/templates/core/project_bar_base.html
+++ b/readthedocsext/theme/templates/core/project_bar_base.html
@@ -38,15 +38,15 @@
       <br>
     {% endif %}
       <ul>
-        <li class="{{ overview_active }}"><a href="{{ project.get_absolute_url }}">{% trans "Overview" %}</a></li>
+        <li><a class="ui button {{ overview_active }}" href="{{ project.get_absolute_url }}">{% trans "Overview" %}</a></li>
 
-        <li class="{{ downloads_active }}"><a href="{% url "project_downloads" project.slug %}" rel="nofollow,noindex">{% trans "Downloads" %}</a></li>
+        <li><a class="ui button {{ downloads_active }}" href="{% url "project_downloads" project.slug %}" rel="nofollow,noindex">{% trans "Downloads" %}</a></li>
 
-        <li class="{{ search_active }}"><a href="{% url "elastic_project_search" project.slug %}" rel="nofollow,noindex">{% trans "Search" %}</a></li>
+        <li><a class="ui button {{ search_active }}" href="{% url "elastic_project_search" project.slug %}" rel="nofollow,noindex">{% trans "Search" %}</a></li>
 
-        <li class="{{ builds_active }}"><a href="{{ project.get_builds_url }}">{% trans "Builds" %}</a></li>
+        <li><a class="ui button {{ builds_active }}" href="{{ project.get_builds_url }}">{% trans "Builds" %}</a></li>
 
-        <li class="{{ versions_active }}"><a href="{% url "project_version_list" project.slug %}">{% trans "Versions" %}</a></li>
+        <li><a class="ui button {{ versions_active }}" href="{% url "project_version_list" project.slug %}">{% trans "Versions" %}</a></li>
 
         {% comment %}
         {% if request.user.is_authenticated %}
@@ -55,7 +55,7 @@
         {% endcomment %}
 
         {% if request.user|is_admin:project %}
-          <li class="{{ edit_active }} project-admin"><a href="{% url "projects_edit" project.slug %}"><i class="gear"></i>{% trans "Admin" %}</a></li>
+          <li class="project-admin"><a class="ui button {{ edit_active }}" href="{% url "projects_edit" project.slug %}"><i class="gear"></i>{% trans "Admin" %}</a></li>
         {% endif %}
       </ul>
     </div>
