--- a/readthedocsext/theme/templates/core/project_details.html
+++ b/readthedocsext/theme/templates/core/project_details.html
@@ -40,7 +40,7 @@
             {% endif %}
               {% if request.user|is_admin:project %}
                 <ul class="module-item-menu">
-                  <li><a href="{% url "project_version_detail" project.slug version.slug %}">{% trans "Edit" %}</a></li>
+                  <li><a class="ui button" href="{% url "project_version_detail" project.slug version.slug %}">{% trans "Edit" %}</a></li>
                 </ul>
               {% endif %}
             </li>
