--- a/readthedocsext/theme/templates/includes/footer.html
+++ b/readthedocsext/theme/templates/includes/footer.html
@@ -25,12 +25,12 @@
                   <label for="mce-EMAIL">{% trans 'Email' %}</label><br>
                   <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="you@example.com">
                 </div>
-                <div id="mce-responses" class="clear">
+                <div id="mce-responses">
                   <div class="response" id="mce-error-response" style="display:none"></div>
                   <div class="response" id="mce-success-response" style="display:none"></div>
                 </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                 <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_a6a22369cc2b356379cf789ca_a85a83a5a5" tabindex="-1" value=""></div>
-                <div class="clear"><input type="submit" value="{% trans 'Subscribe' %}" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                <div><input class="ui button" type="submit" value="{% trans 'Subscribe' %}" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
               </div>
             </form>
           </div>
@@ -123,14 +123,14 @@
                 {% endif %}
               {% endfor %}
             </select>
-            <input type="submit" value="{% trans 'Change Language' %}" name="submit">
+            <input class="ui button" type="submit" value="{% trans 'Change Language' %}" name="submit">
           </form>
         </div>
       {% endblock language-select-form %}
       </div>
     </div>
 
-      <div class="clearfix"></div>
+      <div></div>
 
       <div class="sponsors ui six column doubling  grid container items">
         <div class="column item">
