--- a/readthedocsext/theme/templates/includes/home-header.html
+++ b/readthedocsext/theme/templates/includes/home-header.html
@@ -15,7 +15,7 @@
       <div class="right menu">
         <div class="home-header-links">
           {% comment %}Translators: Note, the full sentence goes 'Sign up' 'or' 'Log in'. But unfortunately the three bits have to be separate.{% endcomment %}
-          <a class="regular" href="{% url "account_signup" %}">{% trans "Sign up" %}</a>
+          <a class="ui button" href="{% url "account_signup" %}">{% trans "Sign up" %}</a>
           <div class="login-box">
             <p>{% trans "or" %} <a class="login" href="{% url "account_login" %}">{% trans "Log in" %}</a></p>
           </div>
