--- a/readthedocsext/theme/templates/includes/widesearchbar.html
+++ b/readthedocsext/theme/templates/includes/widesearchbar.html
@@ -8,7 +8,7 @@
 
 
             <form action="{% url "search" %}" method="GET">
-              <div class="text-input-wrapper">
+              <div class="text-input-wrapper ui input">
                 <input type="text" name="q" value="{{ term }}" id="id_site_search" placeholder="{% trans 'Search Read the Docs' %}">
               </div>
               <div class="submit-input-wrapper">
