--- a/src/css/components/wide_search_bar.less
+++ b/src/css/components/wide_search_bar.less
@@ -2,10 +2,6 @@
   width: 100%;
   border-radius: 5px;
   background: #e6e6e6;
-
-  @media (max-width: 767px) {
-    margin-bottom: 0;
-  }
 }
 
 .wide-search-bar-wrapper {
@@ -21,23 +17,14 @@
   }
 }
 
-.wide-search-bar input {
-  margin: 0;
-  height: 45px;
-  padding: 10px;
-  border-radius: 0;
-}
-
 .wide-search-bar .text-input-wrapper {
   width: 100%;
 }
 
 .wide-search-bar input[type="text"] {
-  border-top-left-radius: 3px;
-  border-bottom-left-radius: 3px;
-  width: 99%;
-  box-sizing: border-box;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 0px, rgba(255, 255, 255, 0.5) 0px 1px 0px inset;
+  @media (min-width: 1024px) {
+    margin-right: 15px;
+  }
 }
 
 .wide-search-bar .submit-input-wrapper {
@@ -50,27 +37,5 @@
 }
 
 .wide-search-bar input[type="submit"] {
-  height: 25px;
   width: 100%;
-}
-
-.wide-search-bar input[type="text"] {
-  border-top-left-radius: 3px;
-  border-bottom-left-radius: 3px;
-  height: 47px;
-}
-
-.wide-search-bar input {
-  height: 25px;
-  margin: 0px;
-  padding: 10px;
-  border-radius: 0px;
-}
-
-.wide-search-bar input[type="submit"] {
-  border-top-right-radius: 3px;
-  border-bottom-right-radius: 3px;
-  height: 47px;
-  width: 100%;
-  text-align: center;
 }
