--- a/readthedocsext/theme/templates/includes/widesearchbar.html
+++ b/readthedocsext/theme/templates/includes/widesearchbar.html
@@ -4,7 +4,7 @@
         <h3>{% trans "Search all the docs" %}</h3>
 
         <div class="wide-search-bar">
-          <div class="wide-search-bar-wrapper clearfix">
+          <div class="wide-search-bar-wrapper">
 
 
             <form action="{% url "search" %}" method="GET">
