--- a/src/css/components/buttons.less
+++ b/src/css/components/buttons.less
@@ -35,4 +35,9 @@ input[type="submit"]:hover {
 
 a.cta-btn {
   width: 300px;
+  padding: 1.2em 1.5em !important;
+}
+
+a.socialaccount-provider.button {
+  margin-bottom: 10px;
 }
