--- a/src/css/components/header.less
+++ b/src/css/components/header.less
@@ -1,5 +1,10 @@
 #rtfd-header .ui.secondary.menu {
   background-color: #465158;
+  margin-bottom: 20px;
+
+  .right.menu .ui.buttons .floating.dropdown :last-child {
+    border-top: 1px solid black;
+  }
 }
 
 .rtfd-header-title h1 {
