--- a/src/css/site.less
+++ b/src/css/site.less
@@ -143,6 +143,8 @@
 @import "components/home_header";
 @import "components/table";
 @import "components/badge_markup";
+@import "components/utilities";
+
 @import "pages/dashboard";
 @import "pages/project_detail";
 @import "pages/elastic_search";
@@ -259,20 +261,10 @@ input {
 
 /* ------ END OF SITE WIDE STYLES ------ */
 
-.notification {
-  padding: 5px 0;
-  color: #a55;
-}
-
 .home .lead {
   font-size: 20px;
   line-height: 30px;
 }
-
-#content-wrapper {
-  padding-top: 20px;
-}
-
 
 #features .grid.container {
   margin-left: 0 !important;
