--- a/src/css/components/badge_markup.less
+++ b/src/css/components/badge_markup.less
@@ -29,3 +29,12 @@
     font-size: 12px;
   }
 }
+
+.get_badge,
+.get_badge:hover {
+  text-decoration: none;
+
+  .info.circle.icon {
+    transform: scale(1.3) translateY(-4px)
+  }
+}
