--- a/src/css/components/footer.less
+++ b/src/css/components/footer.less
@@ -52,6 +52,10 @@
     text-decoration: underline;
   }
 
+  .information {
+    border-top: 1px solid #fff;
+  }
+
   #email-signup p {
     padding-right: 10px;
     font-size: 14px;
