Rework search bar with SUI and use new login page

--- a/readthedocsext/theme/templates/includes/widesearchbar.html
+++ b/readthedocsext/theme/templates/includes/widesearchbar.html
@@ -1,21 +1,16 @@
 {% load i18n %}
 
-        <!-- BEGIN wide search bar -->
-        <h3>{% trans "Search all the docs" %}</h3>
+<!-- BEGIN wide search bar -->
+<h3>{% trans "Search all the docs" %}</h3>
 
-        <div class="wide-search-bar">
-          <div class="wide-search-bar-wrapper">
-
-
-            <form action="{% url "search" %}" method="GET">
-              <div class="text-input-wrapper ui input">
-                <input type="text" name="q" value="{{ term }}" id="id_site_search" placeholder="{% trans 'Search Read the Docs' %}">
-              </div>
-              <div class="submit-input-wrapper">
-                {% comment %} Translators: This is about starting a search {% endcomment %}
-                <input type="submit" value="{% trans "Let's do this." %}">
-              </input>
-            </form>
-
-          </div>
-        </div>
+<div class="wide-search-bar">
+    <form class="ui stackable two column grid" action="{% url "search" %}" method="GET">
+      <div class="thirteen wide computer twelve wide tablet column text-input-wrapper ui input">
+        <input type="text" name="q" value="{{ term }}" id="id_site_search" placeholder="{% trans 'Search Read the Docs' %}">
+      </div>
+      <div class="three wide computer four wide tablet column submit-input-wrapper">
+        {% comment %} Translators: This is about starting a search {% endcomment %}
+        <input type="submit" value="{% trans "Let's do this." %}">
+      </div>
+    </form>
+</div>
