--- a/src/css/components/wide_search_bar.less
+++ b/src/css/components/wide_search_bar.less
@@ -1,41 +1,9 @@
 .wide-search-bar {
-  width: 100%;
-  border-radius: 5px;
+  padding: 8px;
   background: #e6e6e6;
 }
 
-.wide-search-bar-wrapper {
-  padding: 8px;
-}
-
-.wide-search-bar-wrapper form {
-  display: flex;
-
-  @media (max-width: 767px) {
-    flex-direction: column;
-    align-items: center;
-  }
-}
-
-.wide-search-bar .text-input-wrapper {
-  width: 100%;
-}
-
-.wide-search-bar input[type="text"] {
-  @media (min-width: 1024px) {
-    margin-right: 15px;
-  }
-}
-
-.wide-search-bar .submit-input-wrapper {
-  width: 30%;
-
-  @media (max-width: 767px) {
-    width: 50%;
-    margin-top: 10px;
-  }
-}
-
+.wide-search-bar input[type="text"],
 .wide-search-bar input[type="submit"] {
   width: 100%;
 }
