--- a/readthedocsext/theme/templates/projects/project_dashboard_base.html
+++ b/readthedocsext/theme/templates/projects/project_dashboard_base.html
@@ -13,7 +13,7 @@
 
   <!-- BEGIN your projects list -->
   <div class="ui grid stackable" id="dashboard">
-    <div class="twelve wide column">
+    <div class="twelve wide computer sixteen wide tablet sixteen wide mobile column">
       {% if project_list %}
 
         {% if filter.qs.count > 0 %}
@@ -46,8 +46,6 @@
         {% endif %}
 
         <div class="module">
-          <div class="module-wrapper">
-
             <div class="module-header">
               {% block project_import_button %}
               <form method="get" action="{{ projects_import_url }}">
@@ -57,40 +55,37 @@
               <h3>{% trans "Projects" %}</h3>
             </div>
 
-            <div class="module-list">
-              <div class="module-list-wrapper">
+          <div class="modules">
+            <ul>
+              {% for project in project_list %}
+                <li>
+                  <a href="{% url "projects_manage" project.slug %}" class=" ui grid">
+                    <span class="twelve wide computer ten wide tablet seven wide mobile column">
+                      {% block project-name %}
+                        {{ project.name }}
+                      {% endblock %}
+                      {% with build=project.get_latest_build %}
+                    </span>
+                      <span class="four wide computer six wide tablet nine wide mobile column right aligned segment details">
 
-                <ul>
-                  {% for project in project_list %}
-                    <li class="module-item col-span">
-                      <a href="{% url "projects_manage" project.slug %}">
-                        {% block project-name %}
-                          {{ project.name }}
-                        {% endblock %}
-                        {% with build=project.get_latest_build %}
-                          <span class="right quiet">
-
-                            {% if build %}
-                              <time class="build-count" datetime="{{ build.date|date:"c" }}" title="{{ build.date|date:"DATETIME_FORMAT" }}">
-                                <small>{% blocktrans with date=build.date|timesince %}{{ date }} ago{% endblocktrans %}</small>
-                              </time>
-                              {% if build.success %}
-                                <span class="build-state build-state-passing">{% trans "passing" %}</span>
-                              {% else %}
-                                <span class="build-state build-state-failing">{% trans "failing" %}</span>
-                              {% endif %}
-                            {% else %}
-                              <span>{% trans "No builds yet" %}</span>
-                            {% endif %}
-                          </span>
-                        {% endwith %}
-                      </a>
-                    </li>
-                  {% endfor %}
-                </ul>
-
-              </div>
-            </div>
+                        {% if build %}
+                          <time datetime="{{ build.date|date:"c" }}" title="{{ build.date|date:"DATETIME_FORMAT" }}">
+                            <small>{% blocktrans with date=build.date|timesince %}{{ date }} ago{% endblocktrans %}</small>
+                          </time>
+                          {% if build.success %}
+                            <span class="build-state build-state-passing">{% trans "passing" %}</span>
+                          {% else %}
+                            <span class="build-state build-state-failing">{% trans "failing" %}</span>
+                          {% endif %}
+                        {% else %}
+                          <span>{% trans "No builds yet" %}</span>
+                        {% endif %}
+                      </span>
+                    {% endwith %}
+                  </a>
+                </li>
+              {% endfor %}
+            </ul>
           </div>
         </div>
 
@@ -102,7 +97,7 @@
     </div>
   <!-- END your projects list -->
 
-    <div class="four wide column" id="dashboard_sidebar">
+    <div class="four wide computer sixteen wide tablet sixteen wide mobile column" id="dashboard_sidebar">
       <!-- BEGIN project side bar -->
       <!-- BEGIN search form -->
       <div class="module search search-dashboard">
