Remove unnecesary margin and padding

--- a/src/css/site.less
+++ b/src/css/site.less
@@ -261,6 +261,10 @@ input {
 
 /* ------ END OF SITE WIDE STYLES ------ */
 
+#intro {
+  margin-top: 20px;
+}
+
 .home .lead {
   font-size: 20px;
   line-height: 30px;
