--- a/readthedocsext/theme/templates/base.html
+++ b/readthedocsext/theme/templates/base.html
@@ -62,17 +62,18 @@ var $ = jQuery = require('jquery');
 
     {# TODO remove this and use the base-ng theme as the default #}
     {% block content-wrapper %}
-        <div class="ui container" id="content-wrapper">
+        <div class="ui very padded container">
 
           <!-- BEGIN notify -->
           {% if messages %}
-            <ul class="notifications">
-              {% for message in messages %}
-                <li class="notification notification-{{ message.level }}" {% if message.pk %}data-dismiss-url="{% url 'message_mark_read' message.pk %}"{% endif %}>
-                  {{ message }}
-                </li>
-              {% endfor %}
-            </ul>
+            {% for message in messages %}
+              <div class="ui warning message message-{{ message.level }}" {% if message.pk %}data-dismiss-url="{% url 'message_mark_read' message.pk %}"{% endif %}>
+                <i class="close icon"></i>
+                <div class="header">Warning</div>
+
+                {{ message }}
+              </div>
+            {% endfor %}
           {% endif %}
           <!-- END notify -->
 
