--- a/readthedocsext/theme/templates/homepage.html
+++ b/readthedocsext/theme/templates/homepage.html
@@ -17,23 +17,22 @@
 {% block nav-browse %}class="active"{% endblock %}
 
 {% block header %}
-{% if request.user.is_authenticated %}
-{% include "includes/header.html" %}
-{% else %}
-{% include "includes/home-header.html" %}
-{% endif %}
+  {% include "includes/header.html" %}
 {% endblock %}
 
 {% block extra_scripts %}
 {% endblock %}
 
 
-{% block content %}
+{% block content-wrapper %}
   <!-- Lead -->
-  <section id="intro">
-    <div class="column">
-      <h2>{% trans "Technical documentation lives here" %}</h2>
-      <p class="lead">
+  <section class="ui basic segment bottom attached inverted very padded">
+    <div class="ui container center aligned">
+      <div class="ui inverted icon header">
+        <i class="search icon"></i>
+        Technical documentation lives here
+      </div>
+      <p>
         {% blocktrans trimmed %}
         Read the Docs simplifies software documentation by automating building,
         versioning, and hosting of your docs for you.
@@ -42,123 +41,165 @@
     </div>
   </section>
 
-  <section id="features">
-    <div class="ui two column doubling stackabled grid container">
-      <div class="column">
+  <div class="ui container">
+    <section class="ui basic segment center aligned very padded">
+      <div class="ui icon header">
+        <i class="search icon"></i>
         <h3>Free docs hosting</h3>
-        <p>
-          {% blocktrans trimmed %}
-          We will host your documentation for free forever.
-          There are no tricks. We help tens of thousands of open source projects
-          share their docs.
-          {% endblocktrans %}
-        </p>
+      </div>
+      <p>
+        {% blocktrans trimmed %}
+        We will host your documentation for free forever.
+        There are no tricks. We help tens of thousands of open source projects
+        share their docs.
+        {% endblocktrans %}
+      </p>
+    </section>
+
+    <section class="ui three column stackable grid very padded">
+      <div class="column">
+        <div class="ui segment center aligned">
+          <div class="ui icon header">
+            <i class="search icon"></i>
+            <h3>Webhooks</h3>
+          </div>
+          <p>
+            {% blocktrans trimmed %}
+            Whenever you push code to your favorite version control system,
+            whether that is Git, Mercurial, Bazaar, or Subversion, we will
+            automatically build your docs so your code and documentation are
+            never out of sync.
+            {% endblocktrans %}
+          </p>
+        </div>
       </div>
       <div class="column">
-        <h3>Webhooks</h3>
-        <p>
-          {% blocktrans trimmed %}
-          Whenever you push code to your favorite version control system,
-          whether that is Git, Mercurial, Bazaar, or Subversion, we will
-          automatically build your docs so your code and documentation are
-          never out of sync.
-          {% endblocktrans %}
-        </p>
+        <div class="ui segment center aligned">
+          <div class="ui icon header">
+            <i class="search icon"></i>
+            <h3>Multiple formats</h3>
+          </div>
+          <p>
+            {% blocktrans trimmed %}
+            Of course we build and host your docs for the web, but they are
+            also vieweable as PDFs, as single page HTML, and for eReaders.
+            No additional configuration is required.
+            {% endblocktrans %}
+          </p>
+        </div>
       </div>
       <div class="column">
-        <h3>Multiple formats</h3>
-        <p>
-          {% blocktrans trimmed %}
-          Of course we build and host your docs for the web, but they are
-          also vieweable as PDFs, as single page HTML, and for eReaders.
-          No additional configuration is required.
-          {% endblocktrans %}
-        </p>
+        <div class="ui segment center aligned">
+          <div class="ui icon header">
+            <i class="search icon"></i>
+            <h3>Multiple versions</h3>
+          </div>
+          <p>
+            {% blocktrans trimmed %}
+            We can host and build multiple versions of your docs so having a
+            1.0 version of your docs and a 2.0 version of your docs is as easy
+            as having a separate branch or tag in your version control system.
+            {% endblocktrans %}
+          </p>
+        </div>
       </div>
-      <div class="column">
-        <h3>Multiple versions</h3>
-        <p>
-          {% blocktrans trimmed %}
-          We can host and build multiple versions of your docs so having a
-          1.0 version of your docs and a 2.0 version of your docs is as easy
-          as having a separate branch or tag in your version control system.
-          {% endblocktrans %}
-        </p>
-      </div>
-    </div>
-  </section>
+    </section>
+  </div>
 
   <!-- Call to action -->
-  <section>
-  <div class="ui center aligned segment basic">
+  <div class="ui inverted segment basic center aligned very padded">
+    <div class="ui container">
       <a href="https://docs.readthedocs.io/page/intro/getting-started-with-sphinx.html"
-        class="cta-btn ui button green">{% trans 'Getting started guide' %}</a>
+        class="ui button primary">{% trans 'Getting started guide' %}</a>
+    </div>
   </div>
-  </section>
 
   <!-- Search -->
-  <section>
-
-    <div class="ui grid">
-      <div class="column">
-        {% include "includes/widesearchbar.html" %}
-      </div>
-    </div>
-  </section>
+  <div class="ui container very padded">
+    {# include "includes/widesearchbar.html" #}
+  </div>
 
   {% if featured_list %}
+  {% comment %}
   {% get_current_language as language %}
-  {% cache 600 homepage_featured_list language %}
+  {% cache 600 homepage_featured_list language #}
+  {% endcomment %}
+
   <!-- BEGIN projects list -->
-  <section>
-    <h3>{% trans "Featured Projects" %}</h3>
-    <div class="module-list">
-      <div class="module-list-wrapper">
-        <ul>
-          {% include "core/project_list_featured.html" %}
-        </ul>
-      </div>
+  <section class="ui container very padded">
+    <h2 class="ui large centered header">
+      <div class="content">{% trans "Featured Projects" %}</div>
+    </h2>
+    <div class="ui three column stackable grid">
+      {% with "foo bar baz foo-bar bar-foo foo-foo" as projects %}
+        {% for project in projects.split %}
+          <div class="column">
+            <div class="ui fluid card">
+              <div class="content">
+                <div class="header">{{ project }}</div>
+                <div class="meta">123 builds</div>
+                <div class="description">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Curabitur sagittis tortor felis, eu maximus magna aliquet a.
+                </div>
+              </div>
+              <div class="extra content">
+                <a class="ui red label">1.0</a>
+                <a class="ui label">1.1</a>
+                <a class="ui label">1.2</a>
+                <a class="ui label">2.0</a>
+              </div>
+            </div>
+          </div>
+        {% endfor %}
+      {% endwith %}
     </div>
+          {# include "core/project_list_featured.html" #}
   </section>
+
   <!-- END projects list -->
-  {% endcache %}
+  {% comment %}{# endcache #}{% endcomment %}
   {% endif %}
 
   <!-- Funding and Contributing -->
-  <section>
-    <h2>{% trans "Read the Docs is funded by the community" %}</h2>
-    <p>
+  <section class="ui secondary inverted basic segment very padded">
+    <div class="ui container">
+      <h2 class="ui inverted header center aligned">
+        {% trans "Read the Docs is funded by the community" %}
+      </h2>
+      <p>
 
-      {% url "advertising" as advertising_url %}
-      {% url "donate" as sponsors_url %}
-      {% url "gold_detail" as gold_detail %}
+        {% url "advertising" as advertising_url %}
+        {% url "donate" as sponsors_url %}
+        {% url "gold_detail" as gold_detail %}
 
-      {% blocktrans trimmed %}
-      Read the Docs is a huge resource that millions of developers rely on
-      for software documentation. It would not be possible without the
-      support of our
-      <a href="{{ sponsors_url }}">sponsors</a>,
-      <a href="{{ advertising_url }}">advertisers</a>,
-      and <a href="{{ gold_detail }}">readers like you</a>.
-      {% endblocktrans %}
-    </p>
+        {% blocktrans trimmed %}
+        Read the Docs is a huge resource that millions of developers rely on
+        for software documentation. It would not be possible without the
+        support of our
+        <a href="{{ sponsors_url }}">sponsors</a>,
+        <a href="{{ advertising_url }}">advertisers</a>,
+        and <a href="{{ gold_detail }}">readers like you</a>.
+        {% endblocktrans %}
+      </p>
 
-    <p>
-      {% blocktrans trimmed %}
-      Read the Docs is <strong>community supported</strong>.
-      It depends on users like you to contribute to development, support, and operations.
-      You can learn more about how to <a href="https://docs.readthedocs.io/page/contribute.html">contribute</a> in our
-      docs.
-      Thanks so much to our wonderful <a href="https://docs.readthedocs.io/page/team.html">community team</a> who helps us
-      run the site.
-      Read the Docs wouldn't be possible without them.
-      {% endblocktrans %}
-    </p>
+      <p>
+        {% blocktrans trimmed %}
+        Read the Docs is <strong>community supported</strong>.
+        It depends on users like you to contribute to development, support, and operations.
+        You can learn more about how to <a href="https://docs.readthedocs.io/page/contribute.html">contribute</a> in our
+        docs.
+        Thanks so much to our wonderful <a href="https://docs.readthedocs.io/page/team.html">community team</a> who helps us
+        run the site.
+        Read the Docs wouldn't be possible without them.
+        {% endblocktrans %}
+      </p>
 
-    <p>
-      {% blocktrans trimmed %}
-      Hosting for the project is graciously provided by <a href="https://azure.microsoft.com/">Microsoft Azure</a>.
-      {% endblocktrans %}
-    </p>
+      <p>
+        {% blocktrans trimmed %}
+        Hosting for the project is graciously provided by <a href="https://azure.microsoft.com/">Microsoft Azure</a>.
+        {% endblocktrans %}
+      </p>
+    </div>
   </section>
 {% endblock %}
